#2915 fixed spacing of modal deactivated and activate

--- a/web/assets/css/new-dashboard.css
+++ b/web/assets/css/new-dashboard.css
@@ -1598,7 +1598,7 @@ a{
 
 .deactivated-container{
     height: 250px !important;
-    max-height: 310px !important;
+    max-height: 250px !important;
 }
 
 #activated-modal > .deactivate-modal-title {
